plugins {
    id 'java'
}

group = 'ru.hniApplications.testApplication'
version = '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    repositories {
        mavenCentral()
    }
}
